# mirror-pool

./: .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/mp-agent/: Cargo.toml
crates/mp-agent/src/: keystore.rs  lib.rs  main.rs  policy.rs  proposal.rs
crates/mp-crypto/: Cargo.toml
crates/mp-crypto/src/: field.rs  lib.rs  merkle.rs  note.rs  poseidon.rs
crates/mp-eval/: Cargo.toml
crates/mp-eval/src/: adversary.rs  lib.rs  main.rs  metrics.rs  scenario.rs
crates/mp-keeper/: Cargo.toml
crates/mp-keeper/src/: main.rs
crates/mp-proof/: Cargo.toml
crates/mp-proof/examples/: gen_vk.rs
crates/mp-proof/src/: circuit.rs  lib.rs  poseidon.rs  proving.rs  solana.rs
crates/mp-relayer/: Cargo.toml
crates/mp-relayer/src/: lib.rs  main.rs
docs/: ADVERSARIAL.md  DESIGN.md  ROADMAP.md
programs/mirror_pool/: Cargo.toml
programs/mirror_pool/src/: lib.rs  vk.rs
programs/mirror_pool/tests/: incentives.rs  propose.rs  rounds.rs  toolchain.rs  tree.rs
programs/mirror_pool/tests/common/: mod.rs
