[package]
name = "mp-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "mirror-pool participant agent: keygen, durable-nonce pre-signing, round participation"

[lib]
name = "mp_agent"
path = "src/lib.rs"

[[bin]]
name = "mp-agent"
path = "src/main.rs"

[dependencies]
mp-crypto = { path = "../mp-crypto" }
mp-proof = { path = "../mp-proof" }
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-std = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
groth16-solana = "0.2"
