[package]
name = "mp-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "mirror-pool cryptographic primitives: Poseidon, incremental Merkle tree, notes and nullifiers"

[dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
light-poseidon = "0.4.0"

[dev-dependencies]
hex = "0.4"
