[package]
name = "mp-proof"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "mirror-pool Groth16 proving and public-input encoding (arkworks)"

[dependencies]
mp-crypto = { path = "../mp-crypto" }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
light-poseidon = "0.4"

[dev-dependencies]
ark-relations = "0.5"
