[package]
name = "mirror-pool-program"
version = "0.1.0"
description = "mirror-pool on-chain program: membership tree, nullifier set, round state machine, Groth16 verification"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "mirror_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.1.2"
solana-poseidon = "3"

[dev-dependencies]
mp-crypto = { path = "../../crates/mp-crypto" }
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
